--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 }
 
 .movie {
-  background: #A9EFF4;
+  background: #63b7af;
   border-radius: 7px;
   box-shadow: 0 2px 5px #ccc;
   padding: 10px;
@@ -49,13 +49,38 @@
 }
 
 .matchup {
-  background: #808000;
+  background: #d4f3ef;
   border-radius: 7px;
   box-shadow: 0 2px 5px #ccc;
   padding: 10px;
   width: 300px;
   margin: 16px;
   float: left;
+  text-align: center;
+}
+
+.matchupRight {
+  background: #001380a1;
+  border-radius: 7px;
+  box-shadow: 0 2px 5px #ccc;
+  padding: 10px;
+  width: 300px;
+  margin: 16px;
+  float: right;
+  text-align: center;
+}
+
+.leftSide {
+  display: flex;
+  flex-direction: column;
+  float: left;
+
+}
+
+.rightSide {
+  display: flex;
+  flex-direction: column;
+  float: right;
 }
 
 footer {
@@ -71,13 +96,19 @@ footer p {
 }
 
 
-
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media screen and (max-width: 980px) {
+  .container { 
+    -webkit-flex-direction: column;
+    -moz-flex-direction:column;
+    flex-direction:column;
   }
 }
